feat support page

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -25,7 +25,16 @@
     "savedReports": "Relatórios Salvos",
     "about": "Sobre",
     "support": "Suporte",
+    "supportOurProject": "Apoie o nosso projeto",
+    "optionsToSupport": "Opções de apoio",
+    "buyMeACoffe": "Compre me um café",
+    "pixKey": "Chave pix",
+    "whySupport": "Por que apoiar?",
+    "explainWhySupport": "O seu apoio nos ajuda a continuar desenvolvendo e melhorando nosso aplicativo. Com sua ajuda, podemos oferecer atualizações regulares, novos recursos e garantir que o aplicativo continue gratuito para todos os usuários. Obrigado por apoiar nossa missão!",
     "rateUs": "Avalie",
+    "thanks": "Mensagem de agradecimento",
+    "thanksMessage": "Agradecemos por usar nosso aplicativo e por considerar apoiar nosso trabalho. Sua contribuição é fundamental para nosso sucesso contínuo. Se você tiver alguma dúvida ou sugestão, não hesite em entrar em contato conosco. Juntos, podemos fazer a diferença!",
+    "contactUs": "Entre em contato",
     "likeTheApp": "Está gostando do app?",
     "leaveAReview": "Deixe uma avaliação na loja!",
     "itHelpsALot": "Isso ajuda muito!",
@@ -55,6 +64,7 @@
     "quantity": "Quantidade",
     "errorLoadingReports": "Erro ao carregar relatórios",
     "noReportsSaved": "Não há relatórios salvos ainda",
+    "couldNotLaunch": "Não foi possivel abrir",
     "neutrophilsTitle": "Neutrófilos",
     "neutrophilsDescription": "Os neutrófilos são células de defesa imunológica que geralmente têm núcleos segmentados, com 2 a 5 segmentos conectados por filamentos finos. A cor do citoplasma é levemente rosada a incolor. São as células brancas mais abundantes, com tamanho médio e forma arredondada a ligeiramente lobulada. Podem conter grânulos finos e pálidos, mas geralmente não são muito visíveis. Os neutrófilos são altamente móveis e fagocitam bactérias.",
     "neutrophilsTopic1": "Núcleo: Os neutrófilos geralmente têm núcleos segmentados, com 2 a 5 segmentos conectados por filamentos finos.",
