--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -25,7 +25,16 @@
     "savedReports": "Saved Reports",
     "about": "About",
     "support": "Support",
+    "supportOurProject": "Support our project",
+    "optionsToSupport": "Options to support",
+    "buyMeACoffe": "Buy me a coffe",
+    "pixKey": "Pix key",
+    "whySupport": "Why support us?",
+    "explainWhySupport": "Your support helps us continue to develop and improve our app. With your help, we can offer regular updates, new features, and ensure the app remains free for all users. Thank you for supporting our mission!",
     "rateUs": "Rate Us",
+    "thanks": "Thank you message",
+    "thanksMessage": "Thank you for using our app and considering supporting our work. Your contribution is critical to our continued success. If you have any questions or suggestions, please don't hesitate to contact us. Together we can make a difference!",
+    "contactUs": "Contact us",
     "likeTheApp": "Do you like the app?",
     "leaveAReview": "Leave a review in the store!",
     "itHelpsALot": "This helps us a lot!",
@@ -56,6 +65,7 @@
     "errorLoadingReports": "Error loading reports",
     "noReportsSaved": "No reports saved yet",
     "neutrophilsTitle": "Neutrophils",
+    "couldNotLaunch": "Could not launch",
     "neutrophilsDescription": "Neutrophils are immune defense cells that generally have segmented nuclei, with 2 to 5 segments connected by thin filaments. The color of the cytoplasm is slightly pink to colorless. They are the most abundant white cells, with medium size and shape rounded to slightly lobed. They may contain fine, pale granules, but they are usually not very visible. Neutrophils are highly motile and phagocytose bacteria.",
     "neutrophilsTopic1": "Nucleus: Neutrophils generally have segmented nuclei, with 2 to 5 segments connected by thin filaments.",
     "neutrophilsTopic2": "Cytoplasm Color: The cytoplasm is slightly pink to colorless.",
