feat config intl

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -32,6 +32,20 @@
     "whySupport": "Why support us?",
     "explainWhySupport": "Your support helps us continue to develop and improve our app. With your help, we can offer regular updates, new features, and ensure the app remains free for all users. Thank you for supporting our mission!",
     "rateUs": "Rate Us",
+    "configWbc": "WBC Configuration",
+    "theme": "Theme",
+    "notifications": "Notifications",
+    "vibration": "Vibration",
+    "sound": "Sound",
+    "alertThresholds": "Notify count",
+    "addNewAlertThreshold": "Add new alert threshold",
+    "language": "Language",
+    "resetConfiguration": "Reset configuration",
+    "alertToCount": "Alert when WBC count reaches:",
+    "dark": "Dark",
+    "light": "Light",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
     "thanks": "Thank you message",
     "thanksMessage": "Thank you for using our app and considering supporting our work. Your contribution is critical to our continued success. If you have any questions or suggestions, please don't hesitate to contact us. Together we can make a difference!",
     "contactUs": "Contact us",
