--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -32,6 +32,21 @@
     "whySupport": "Por que apoiar?",
     "explainWhySupport": "O seu apoio nos ajuda a continuar desenvolvendo e melhorando nosso aplicativo. Com sua ajuda, podemos oferecer atualizações regulares, novos recursos e garantir que o aplicativo continue gratuito para todos os usuários. Obrigado por apoiar nossa missão!",
     "rateUs": "Avalie",
+    "resetConfigs": "Redefinir todas as configurações para seus padrões",
+    "configWbc": "Configuração da WBC",
+    "theme": "Tema",
+    "notifications": "Notificações",
+    "vibration": "Vibração",
+    "sound": "Som",
+    "alertThresholds": "Notificar contagem",
+    "addNewAlertThreshold": "Adicionar novo limiar de alerta",
+    "language": "Idioma",
+    "resetConfiguration": "Redefinir configuração",
+    "dark": "Escuro",
+    "light": "Claro",
+    "enabled": "Ativado",
+    "disabled": "Desativado",
+    "alertToCount": "Alertar quando a contagem de WBC atingir:",
     "thanks": "Mensagem de agradecimento",
     "thanksMessage": "Agradecemos por usar nosso aplicativo e por considerar apoiar nosso trabalho. Sua contribuição é fundamental para nosso sucesso contínuo. Se você tiver alguma dúvida ou sugestão, não hesite em entrar em contato conosco. Juntos, podemos fazer a diferença!",
     "contactUs": "Entre em contato",
