--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -116,5 +116,5 @@
     "monocytesTopic5": "Mobility and Activity: They are mobile and differentiate into macrophages when they move to tissues.",
     "moreExamples": "More Examples",
     "howIdentify": "How to identify the cells?",
-    "tipsToIdentify": "Tips to identify the cells"
+    "tipsToIdentify": "Tips to identify"
 }
