--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -117,5 +117,5 @@
     "monocytesTopic5": "Mobilidade e Atividade: São móveis e se diferenciam em macrófagos quando se deslocam para os tecidos.",
     "moreExamples": "Mais exemplos",
     "howIdentify": "Como identificar as células",
-    "tipsToIdentify": "Dicas para identificar as células"
+    "tipsToIdentify": "Dicas de identificação"
 }
