--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -131,5 +131,14 @@
     "promielocitosTitle": "Promielocitos",
     "reticulocitosTitle": "Reticulocitos",
     "hipersegmentadosTitle": "Hipersegmentados",
-    "pilosasTitle": "Pilosas"
+    "pilosasTitle": "Pilosas",
+    "experimentalFeature": "This feature is experimental and is using the Roboflow API.",
+    "dataDisclaimer": "The data provided should not be considered absolute or confirmatory.",
+    "uploadFromGallery": "Upload from Gallery",
+    "useCamera": "Use Camera",
+    "loading": "Loading",
+    "error": "Error",
+    "aiHelpPage": "AI Help Page",
+    "analysisResults": "Analysis Results",
+    "backToMenu": "Back to Menu"
 }
