--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -130,5 +130,14 @@
     "promielocitosTitle": "Promyélocytes",
     "reticulocitosTitle": "Réticulocytes",
     "hipersegmentadosTitle": "Hyperségmentés",
-    "pilosasTitle": "Piloses"
+    "pilosasTitle": "Piloses",
+    "experimentalFeature": "Cette fonctionnalité est expérimentale et utilise l'API de Roboflow.",
+    "dataDisclaimer": "Les données fournies ne doivent pas être considérées comme absolues ou confirmatoires.",
+    "uploadFromGallery": "Télécharger depuis la Galerie",
+    "useCamera": "Utiliser la Caméra",
+    "loading": "Chargement",
+    "error": "Erreur",
+    "aiHelpPage": "Page d'Aide IA",
+    "analysisResults": "Résultats de l'Analyse",
+    "backToMenu": "Retour au Menu"
 }
