--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -141,5 +141,6 @@
     "error": "Error",
     "aiHelpPage": "Página de Ayuda de IA",
     "analysisResults": "Resultados del Análisis",
-    "backToMenu": "Volver al Menú"
+    "backToMenu": "Volver al Menú",
+    "explainCount": "Esto es sólo una calculadora, los datos deben ser sumados, interpretados y calculados por un profesional de la salud."
 }
