--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -141,5 +141,6 @@
     "error": "Erro",
     "aiHelpPage": "AI Help Page",
     "analysisResults": "Resultados da Análise",
-    "backToMenu": "Voltar ao Menu"
+    "backToMenu": "Voltar ao Menu",
+    "explainCount": "Essa é apenas uma calculadora, os dados devem ser adicionados, interpretados e calculados por um profissional de saúde."
 }
