feat: 2025 update project

--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -142,5 +142,5 @@
     "aiHelpPage": "Página de Ayuda de IA",
     "analysisResults": "Resultados del Análisis",
     "backToMenu": "Volver al Menú",
-    "explainCount": "Esto es sólo una calculadora, los datos deben ser sumados, interpretados y calculados por un profesional de la salud."
+    "explainCount": "Esto es sólo una calculadora, los datos deben ser sumados, interpretados y calculados por un profesional de la salud. Ver aquí"
 }
