--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -141,5 +141,5 @@
     "aiHelpPage": "AI Help Page",
     "analysisResults": "Analysis Results",
     "backToMenu": "Back to Menu",
-    "explainCount": "This is just a calculator, the data must be added, interpreted and calculated by a healthcare professional."
+    "explainCount": "This is just a calculator, the data must be added, interpreted and calculated by a healthcare professional. Check here"
 }
