--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -141,5 +141,5 @@
     "aiHelpPage": "Pagina di Aiuto IA",
     "analysisResults": "Risultati dell'Analisi",
     "backToMenu": "Torna al Menù",
-    "explainCount": "Questa è solo una calcolatrice, i dati devono essere aggiunti, interpretati e calcolati da un operatore sanitario."
+    "explainCount": "Questa è solo una calcolatrice, i dati devono essere aggiunti, interpretati e calcolati da un operatore sanitario. Vedi qui"
 }
