--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -125,13 +125,15 @@
     "italian": "Italian",
     "eritrocytesTitle": "Eritrocytes",
     "plateletsTitle": "Platelets",
-    "blastTitle": "Blast",
+    "blastTitle": "Blasts",
     "matamielocitosTitle": "Matamielocitos",
     "mielocitosTitle": "Mielocitos",
     "promielocitosTitle": "Promielocitos",
     "reticulocitosTitle": "Reticulocitos",
     "hipersegmentadosTitle": "Hipersegmentados",
-    "pilosasTitle": "Pilosas",
+    "pilosasTitle": "Hairys",
+    "myeloblastTitle": "Myeloblasts",
+    "bastoneteTitle": "Band Cells",
     "experimentalFeature": "This feature is experimental and is using the Roboflow API.",
     "dataDisclaimer": "The data provided should not be considered absolute or confirmatory.",
     "uploadFromGallery": "Upload from Gallery",
@@ -141,5 +143,22 @@
     "aiHelpPage": "AI Help Page",
     "analysisResults": "Analysis Results",
     "backToMenu": "Back to Menu",
-    "explainCount": "This is just a calculator, the data must be added, interpreted and calculated by a healthcare professional. Check here"
+    "explainCount": "This is just a calculator, the data must be added, interpreted and calculated by a healthcare professional. Check here",
+    "eritroblastosTitle": "Erythroblasts",
+    "acantocitosTitle": "Acanthocytes",
+    "equinocitosTitle": "Echinocytes",
+    "eliptocitosTitle": "Elliptocytes",
+    "foicesTitle": "Sickle Cells",
+    "estomatocitosTitle": "Stomatocytes",
+    "alvoTitle": "Target Cells",
+    "lagrimaTitle": "Tear Drop Cells",
+    "esferocitosTitle": "Spherocytes",
+    "contraidasTitle": "Contracted Cells",
+    "mordidasTitle": "Bite Cells",
+    "bolhaTitle": "Blister Cells",
+    "ponteadoTitle": "Basophilic Stippling",
+    "howellTitle": "Howell-Jolly Bodies",
+    "cristaishTitle": "Hemoglobin Crystals",
+    "moiTitle": "Intraerythrocytic Microorganisms",
+    "shapeCells": "Shape Cells"
 }
