--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -133,6 +133,8 @@
     "reticulocitosTitle": "Reticulocitos",
     "hipersegmentadosTitle": "Hipersegmentados",
     "pilosasTitle": "Pilosas",
+    "myeloblastTitle": "Mieloblasto",
+    "bastoneteTitle": "Band cells",
     "experimentalFeature": "Esta función es experimental y está utilizando la API de Roboflow.",
     "dataDisclaimer": "Los datos proporcionados no deben considerarse absolutos o confirmatorios.",
     "uploadFromGallery": "Cargar desde la Galería",
@@ -142,5 +144,22 @@
     "aiHelpPage": "Página de Ayuda de IA",
     "analysisResults": "Resultados del Análisis",
     "backToMenu": "Volver al Menú",
-    "explainCount": "Esto es sólo una calculadora, los datos deben ser sumados, interpretados y calculados por un profesional de la salud. Ver aquí"
+    "explainCount": "Esto es sólo una calculadora, los datos deben ser sumados, interpretados y calculados por un profesional de la salud. Ver aquí",
+    "eritroblastosTitle": "Eritroblastos",
+    "acantocitosTitle": "Acantocitos",
+    "equinocitosTitle": "Equinocitos",
+    "eliptocitosTitle": "Eliptocitos",
+    "foicesTitle": "Células falciformes",
+    "estomatocitosTitle": "Estomatocitos",
+    "alvoTitle": "Células diana",
+    "lagrimaTitle": "Células en lágrima",
+    "esferocitosTitle": "Esferocitos",
+    "contraidasTitle": "Células contraídas",
+    "mordidasTitle": "Células mordidas",
+    "bolhaTitle": "Células en burbuja",
+    "ponteadoTitle": "Punteado basófilo",
+    "howellTitle": "Cuerpos de Howell-Jolly",
+    "cristaishTitle": "Cristales de hemoglobina",
+    "moiTitle": "Microorganismos intraeritrocíticos",
+    "shapeCells": "Forma de las células"
 }
