--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -124,13 +124,15 @@
     "thanksMessage": "Merci d'utiliser notre application et de considérer soutenir notre travail. Votre contribution est essentielle à notre succès continu. Si vous avez des questions ou des suggestions, n'hésitez pas à nous contacter. Ensemble, nous pouvons faire la différence !",
     "eritrocytesTitle": "Érythrocytes",
     "plateletsTitle": "Plaquettes",
-    "blastTitle": "Blaste",
+    "blastTitle": "Blastes",
     "matamielocitosTitle": "Matamiélocytes",
     "mielocitosTitle": "Mielocytes",
     "promielocitosTitle": "Promyélocytes",
     "reticulocitosTitle": "Réticulocytes",
     "hipersegmentadosTitle": "Hyperségmentés",
     "pilosasTitle": "Piloses",
+    "myeloblastTitle": "Myéloblastes",
+    "bastoneteTitle": "Band cells",
     "experimentalFeature": "Cette fonctionnalité est expérimentale et utilise l'API de Roboflow.",
     "dataDisclaimer": "Les données fournies ne doivent pas être considérées comme absolues ou confirmatoires.",
     "uploadFromGallery": "Télécharger depuis la Galerie",
@@ -140,5 +142,22 @@
     "aiHelpPage": "Page d'Aide IA",
     "analysisResults": "Résultats de l'Analyse",
     "backToMenu": "Retour au Menu",
-    "explainCount": "Ceci n'est qu'un calculateur, les données doivent être ajoutées, interprétées et calculées par un professionnel de santé. Voir ici"
+    "explainCount": "Ceci n'est qu'un calculateur, les données doivent être ajoutées, interprétées et calculées par un professionnel de santé. Voir ici",
+    "eritroblastosTitle": "Érythroblastes",
+    "acantocitosTitle": "Acanthocytes",
+    "equinocitosTitle": "Échinocytes",
+    "eliptocitosTitle": "Elliptocytes",
+    "foicesTitle": "Cellules falciformes",
+    "estomatocitosTitle": "Stomatocytes",
+    "alvoTitle": "Cellules cibles",
+    "lagrimaTitle": "Cellules en larme",
+    "esferocitosTitle": "Sphérocytes",
+    "contraidasTitle": "Cellules contractées",
+    "mordidasTitle": "Cellules mordues",
+    "bolhaTitle": "Cellules en bulle",
+    "ponteadoTitle": "Ponctuation basophile",
+    "howellTitle": "Corps de Howell-Jolly",
+    "cristaishTitle": "Cristaux d'hémoglobine",
+    "moiTitle": "Microorganismes intraérythrocytaires",
+    "shapeCells": "Forme des cellules"
 }
