--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -125,13 +125,15 @@
     "italian": "Italiano",
     "eritrocytesTitle": "Eritrociti",
     "plateletsTitle": "Piastrine",
-    "blastTitle": "Blast",
+    "blastTitle": "Blasts",
     "matamielocitosTitle": "Matamielociti",
     "mielocitosTitle": "Mielociti",
     "promielocitosTitle": "Promielociti",
     "reticulocitosTitle": "Reticulociti",
     "hipersegmentadosTitle": "Ipersegmentati",
     "pilosasTitle": "Pilose",
+    "myeloblastTitle": "Mieloblasts",
+    "bastoneteTitle": "Band cells",
     "experimentalFeature": "Questa funzionalità è sperimentale e utilizza l'API di Roboflow.",
     "dataDisclaimer": "I dati forniti non devono essere considerati assoluti o confermatori.",
     "uploadFromGallery": "Carica dalla Galleria",
@@ -141,5 +143,22 @@
     "aiHelpPage": "Pagina di Aiuto IA",
     "analysisResults": "Risultati dell'Analisi",
     "backToMenu": "Torna al Menù",
-    "explainCount": "Questa è solo una calcolatrice, i dati devono essere aggiunti, interpretati e calcolati da un operatore sanitario. Vedi qui"
+    "explainCount": "Questa è solo una calcolatrice, i dati devono essere aggiunti, interpretati e calcolati da un operatore sanitario. Vedi qui",
+    "eritroblastosTitle": "Eritroblasti",
+    "acantocitosTitle": "Acantociti",
+    "equinocitosTitle": "Echinociti",
+    "eliptocitosTitle": "Ellittociti",
+    "foicesTitle": "Cellule a falce",
+    "estomatocitosTitle": "Stomatociti",
+    "alvoTitle": "Cellule bersaglio",
+    "lagrimaTitle": "Cellule a goccia",
+    "esferocitosTitle": "Sferociti",
+    "contraidasTitle": "Cellule contratte",
+    "mordidasTitle": "Cellule morse",
+    "bolhaTitle": "Cellule a vescica",
+    "ponteadoTitle": "Punteggiatura basofila",
+    "howellTitle": "Corpi di Howell-Jolly",
+    "cristaishTitle": "Cristalli di emoglobina",
+    "moiTitle": "Microrganismi intraeritrocitari",
+    "shapeCells": "Forma delle cellule"
 }
