--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -133,6 +133,8 @@
     "reticulocitosTitle": "Reticulócitos",
     "hipersegmentadosTitle": "Hipersegmentados",
     "pilosasTitle": "Pilosas",
+    "myeloblastTitle": "Mieloblastos",
+    "bastoneteTitle": "Bastonetes",
     "experimentalFeature": "Esta funcionalidade é experimental e está utilizando a API do Roboflow.",
     "dataDisclaimer": "Os dados fornecidos não devem ser considerados absolutos ou confirmatórios.",
     "uploadFromGallery": "Carregar da Galeria",
@@ -142,5 +144,22 @@
     "aiHelpPage": "AI Help Page",
     "analysisResults": "Resultados da Análise",
     "backToMenu": "Voltar ao Menu",
-    "explainCount": "Essa é apenas uma calculadora, os dados devem ser adicionados, interpretados e calculados por um profissional de saúde. Veja aqui"
+    "explainCount": "Essa é apenas uma calculadora, os dados devem ser adicionados, interpretados e calculados por um profissional de saúde. Veja aqui",
+    "eritroblastosTitle": "Eritroblastos",
+    "acantocitosTitle": "Acantócitos",
+    "equinocitosTitle": "Equinócitos",
+    "eliptocitosTitle": "Eliptócitos",
+    "foicesTitle": "Foices",
+    "estomatocitosTitle": "Estomatócitos",
+    "alvoTitle": "Em alvo",
+    "lagrimaTitle": "Lágrima",
+    "esferocitosTitle": "Esferócitos",
+    "contraidasTitle": "Contraídas",
+    "mordidasTitle": "Mordidas",
+    "bolhaTitle": "Em bolha",
+    "ponteadoTitle": "Ponteado basófilo",
+    "howellTitle": "Corpúsculo de Howell-Jolly",
+    "cristaishTitle": "Cristais de hemoglobina",
+    "moiTitle": "Micro-organismos intraeritrocitários",
+    "shapeCells": "Forma das células"
 }
