add new languages

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -169,5 +169,9 @@
     "noCoordinates": "No coordinates",
     "coordinate": "Coordinate",
     "editInformation": "Edit information",
-    "cellName": "Cell name"
+    "cellName": "Cell name",
+    "tagalog": "Tagalog",
+    "hindi": "Hindi",
+    "thai": "Thai",
+    "arabic": "Arabic"
 }
