--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -169,5 +169,9 @@
     "noCoordinates": "Nessuna coordinata",
     "coordinate": "Coordinata",
     "editInformation": "Modifica informazioni",
-    "cellName": "Nome della cellula"
+    "cellName": "Nome della cellula",
+    "tagalog": "Tagalog",
+    "hindi": "Hindi",
+    "thai": "Thai",
+    "arabic": "Arabic"
 }
