--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -160,5 +160,18 @@
     "howellTitle": "Howell-Jolly Bodies",
     "cristaishTitle": "Hemoglobin Crystals",
     "moiTitle": "Intraerythrocytic Microorganisms",
-    "shapeCells": "Shape Cells"
+    "shapeCells": "Shape Cells",
+    "addImages": "Add images",
+    "findingsForReport": "Findings for the report",
+    "takePhoto": "Take photo",
+    "chooseFromGallery": "Choose from gallery",
+    "noName": "No name",
+    "noCoordinates": "No coordinates",
+    "coordinate": "Coordinate",
+    "editInformation": "Edit information",
+    "cellName": "Cell name",
+    "tagalog": "Tagalog",
+    "hindi": "Hindi",
+    "thai": "Thai",
+    "arabic": "Arabic"
 }
