--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -123,6 +123,7 @@
     "spanish": "الإسبانية",
     "french": "الفرنسية",
     "italian": "الإيطالية",
+    "german": "الألمانية",
     "eritrocytesTitle": "كريات الدم الحمراء",
     "plateletsTitle": "الصفائح الدموية",
     "blastTitle": "الخلايا الأرومية",
