--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -123,6 +123,7 @@
     "spanish": "Spanish",
     "french": "French",
     "italian": "Italian",
+    "german": "German",
     "eritrocytesTitle": "Eritrocytes",
     "plateletsTitle": "Platelets",
     "blastTitle": "Blasts",
