--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -124,6 +124,7 @@
     "spanish": "Español",
     "french": "Francés",
     "italian": "Italiano",
+    "german": "Alemán",
     "eritrocytesTitle": "Eritrocitos",
     "plateletsTitle": "Plaquetas",
     "blastTitle": "Blasto",
