--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -123,6 +123,7 @@
     "spanish": "स्पेनिश",
     "french": "फ्रेंच",
     "italian": "इतालवी",
+    "german": "जर्मन",
     "eritrocytesTitle": "एरिथ्रोसाइट्स",
     "plateletsTitle": "प्लेटलेट्स",
     "blastTitle": "ब्लास्ट्स",
