--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -123,6 +123,7 @@
     "spanish": "Spagnolo",
     "french": "Francese",
     "italian": "Italiano",
+    "german": "Tedesco",
     "eritrocytesTitle": "Eritrociti",
     "plateletsTitle": "Piastrine",
     "blastTitle": "Blasts",
