--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -124,6 +124,7 @@
     "spanish": "Espanhol",
     "french": "Francês",
     "italian": "Italiano",
+    "german": "Alemão",
     "eritrocytesTitle": "Eritrócitos",
     "plateletsTitle": "Plaquetas",
     "blastTitle": "Blasto",
