--- a/lib/l10n/intl_th.arb
+++ b/lib/l10n/intl_th.arb
@@ -123,6 +123,7 @@
     "spanish": "สเปน",
     "french": "ฝรั่งเศส",
     "italian": "อิตาลี",
+    "german": "เยอรมัน",
     "eritrocytesTitle": "อีริโทรไซต์",
     "plateletsTitle": "เกล็ดเลือด",
     "blastTitle": "บลาสต์",
