--- a/lib/l10n/intl_tl.arb
+++ b/lib/l10n/intl_tl.arb
@@ -124,6 +124,7 @@
     "spanish": "Espanyol",
     "french": "Pranses",
     "italian": "Italyano",
+    "german": "Aleman",
     "eritrocytesTitle": "Eritrosito",
     "plateletsTitle": "Platelets",
     "blastTitle": "Blasto",
